# fluidlan-theme

./: .gitignore  LICENSE  README.md  generate.py  palette.json
.github/workflows/: release.yml  validate.yml
colors/: fluidlan-light.lua  fluidlan-light.vim  fluidlan.lua  fluidlan.vim
editors/helix/: fluidlan-light.toml  fluidlan.toml
editors/pygments/: pyproject.toml
editors/pygments/pygments_fluidlan/: __init__.py  dark.py  light.py
editors/vscode/: package.json
editors/vscode/themes/: fluidlan-dark.json  fluidlan-light.json
editors/zed/: fluidlan-light.json  fluidlan.json
lua/fluidlan/: init.lua  palette.lua  palette_light.lua  theme.lua
lua/lualine/themes/: fluidlan.lua
scripts/: release.sh
terminals/alacritty/: fluidlan-light.toml  fluidlan.toml
terminals/ghostty/: fluidlan  fluidlan-light
terminals/kitty/: fluidlan-light.conf  fluidlan.conf  kitty.conf
terminals/tmux/: fluidlan-light.conf  fluidlan.conf
terminals/wezterm/: fluidlan-light.toml  fluidlan.toml
terminals/windows-terminal/: fluidlan-light.json  fluidlan.json
